switch filename to inputPath, add javadoc and fix descriptions, change exception message, return path, add apache-tika and verify OCR happened