@@ -1,6 +1,7 @@
 package ocr4u.services;
 
 import ocr4u.services.PDFService;
+import org.apache.tika.Tika;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
@@ -11,6 +12,8 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class PDFServiceTest {
@@ -33,8 +36,12 @@ public class PDFServiceTest {
         // screenshot pasted into LibreOffice Writer document and print to PDF
         String testFile = "src/test/resources/cat.pdf";
 
-        pdfService.addOcrtoPdf(Path.of(testFile), tmpFolder);
+        Path testOutput = pdfService.addOcrToPdf(Path.of(testFile), tmpFolder);
+        String testOutputText = new Tika().parseToString(testOutput);
+
+        assertEquals(Paths.get(tmpFolder + "/cat.pdf"), testOutput);
         assertTrue(Files.exists(Paths.get(tmpFolder + "/cat.pdf")));
+        assertFalse(testOutputText.isEmpty());
     }
 
     @Test
@@ -42,8 +49,12 @@ public class PDFServiceTest {
         // print to PDF
         String testFile = "src/test/resources/Cat-Wikipedia.pdf";
 
-        pdfService.redoExistingOCR(Path.of(testFile), tmpFolder);
+        Path testOutput = pdfService.redoExistingOCR(Path.of(testFile), tmpFolder);
+        String testOutputText = new Tika().parseToString(testOutput);
+
+        assertEquals(Paths.get(tmpFolder + "/Cat-Wikipedia.pdf"), testOutput);
         assertTrue(Files.exists(Paths.get(tmpFolder + "/Cat-Wikipedia.pdf")));
+        assertFalse(testOutputText.isEmpty());
     }
 
 }
